# notepanda

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  gmail  gmail.pub  main.cpp  notepanda.cpp  notepanda.h  notepanda.md  notepanda.pro  notepanda.rc  notepanda.ui  resources.qrc  texteditor.cpp
.github/ISSUE_TEMPLATE/: bug-report.md  bugReport.md  featureRequest.md  feature_request.md  question.md
.github/workflows/: build.yml  check-format.yml  cpack-deb.yml  cpack-nsis.yml  nsis.yml
assets/: CREDIT.md  notepanda.desktop  notepanda.rc
cmake/: KF5SyntaxHighlightingConfig.cmake
images/: notepanda.icns
makespec/: VERSION  VERSIONSUFFIX
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notepanda.cpp  notepanda.h  notepanda.ui  texteditor.cpp  texteditor.h
src/core/: configmanager.cpp  configmanager.h  settings.cpp  settings.h  texteditor.cpp  texteditor.h
src/ui/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  colorpicker.cpp  colorpicker.h  linenumberarea.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferenceswindow.cpp  preferenceswindow.h  preferenceswindow.ui  previewpanel.cpp  previewpanel.h
